--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ a {
       height: auto;
     }
 
-    #sb-cta-dark .cold-md-9 {
+    #sb-cta-dark .col-md-9 {
 background: white;
     padding: 2rem;
     border-radius: 3rem;
