--- a/index.html
+++ b/index.html
@@ -1385,8 +1385,7 @@ background: white;
 
 
   <!-- FAQs -->
-  <!-- FAQs -->
-  <section class="padding-tb-50 bg-light" id="sb-faq">
+    <section class="padding-tb-50 bg-light" id="sb-faq">
     <div class="container">
       <h2 class="text-center mb-5 heading-2-dark">
         Frequently Asked Questions <span style="color:#ff8b00;">(FAQ)</span>
@@ -1479,10 +1478,25 @@ background: white;
             </div>
           </div>
         </div>
+        <!-- FAQ ITEM -->
+        <div class="faq-item">
+          <button class="faq-header" data-toggle="collapse" data-target="#faq6">
+            <span class="faq-icon">&#9656;</span>
+            Can I integrate Searchbug’s people finder with my CRM or via API?
+          </button>
+          <div id="faq6" class="collapse" data-parent="#faqAccordion">
+            <div class="faq-body">
+              Yes. Businesses and developers can integrate Searchbug’s People Search API directly into their CRM or
+              workflow for real-time lookups, bulk
+              data updates, and list cleaning. Test Searchbug's People Search API by registering for a FREE API Test
+              Account today with $10 in credits so
+              you can verify the data accuracy before committing.
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
