--- a/index.html
+++ b/index.html
@@ -371,11 +371,18 @@ a {
       height: auto;
     }
 
-    #sb-cta-dark .col-md-9 {
+    #sb-cta-dark .col-md-9 div {
 background: white;
     padding: 2rem;
     border-radius: 3rem;
 }
+
+    .sb-testimonial-customer {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+    }
 
     /* 768 Media Screen */
     @media only screen and (max-width: 768px) {
@@ -430,6 +437,9 @@ background: white;
       p,
       li {
         font-size: 16px !important
+      }
+                  .sb-testimonial-customer {
+        font-size: 1rem;
       }
     }
 
